check if there is an active focus controller before sending the blur (r=pink/sr=bryner/a=brendan) bug 198153